--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ install:
   - pip install pybooru
   - pip install python-telegram-bot
   - pip install retrying
+  - pip install schedule
 script:
   - python3 animebot.py
